app/public/stylesheets/styles.css
/* League Gothic Regular */
@font-face {
    font-family: 'League Gothic';
    src: url('../fonts/leaguegothic-regular-webfont.eot');
    src: url('../fonts/leaguegothic-regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/leaguegothic-regular-webfont.woff') format('woff'),
         url('../fonts/leaguegothic-regular-webfont.ttf') format('truetype'),
         url('../fonts/leaguegothic-regular-webfont.svg#league_gothicregular') format('svg');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'Entypo';
    src: url('../fonts/entypo.eot');
    src: url('../fonts/entypo.eot?#iefix') format('embedded-opentype'),
         url('../fonts/entypo.woff') format('woff'),
         url('../fonts/entypo.ttf') format('truetype'),
         url('../fonts/entypo.svg#league_gothicregular') format('svg');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'Entypo Social';
    src: url('../fonts/entypo-social.eot');
    src: url('../fonts/entypo-social.eot?#iefix') format('embedded-opentype'),
         url('../fonts/entypo-social.woff') format('woff'),
         url('../fonts/entypo-social.ttf') format('truetype'),
         url('../fonts/entypo-social.svg#league_gothicregular') format('svg');
    font-weight: normal;
    font-style: normal;
}
/*
 * COLORS:
 * 
 * #e67e22 - Carrot
 * 
 * #ecf0f1 - Clouds
 * #bdc3c7 - Silver
 * 
 * #95a5a6 - Concrete
 * #7f8c8d - Asbestos
 * 
 * #34495e - Wet asphalt
 * #2c3e50 - Midnight blue
 * 
 * #782121 - Old Wine
 * #c0392b - Pomegranate
 * #f1c40f - Sunflower
 * #1abc9c - Turquoise
 * 
 */

.clearfix:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}
 
html[xmlns] .clearfix {
  display: block;
}
 
* html .clearfix {
  height: 1%;
}

.clear-small {
  display: none;
  clear: both;
}

/* Structure */
body {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 14px;
  color: #34495e;
}

.one-fifths {
  width: 20%;
}

.two-fifths {
  width: 40%;
}

.three-fifths {
  width: 60%;
}
.four-fifths {
  width: 80%;
}

.content-column {
  float: left;
  width: 48%;
}

.content-column.first {
  margin-right: 4%;
}

.content-column > *:first-child {
  margin-top: 14px;
}

.float-left {
  float: left;
}

.float-right {
  float: right;
}

.wrapper {
  padding: 20px;
}

.margin-right-10 {
  margin-right: 10px;
}

#header,
#footer {
  background-color: #34495e; /* Wet asphalt */
}

#header {
  border-bottom: 2px solid #2c3e50; /* Midnight blue */
}

#header nav {
  margin-top: 9px;
  float: right;
}
#header nav ul {
  margin: 0;
  padding: 0;
}

#header nav li {
  display: inline-block;
  text-decoration: none;
  padding: 0 0 0 20px;
}

#footer {
  border-top: 2px solid #2c3e50; /* Midnight blue */
  color: #FFFFFF;
  font-size: 12px;
}

#footer .logo {
  float: left;
  margin-right: 10px;
}

#fires-year {
  height: 300px;
}

#burnt-area {
  height: 200px;
}

#burnt-area-country {
  height: 200px;
}

.stats-box .wrapper {
  background: none repeat scroll 0 0 #ECF0F1; /* Clouds */
  border: 1px solid #BDC3C7; /* Sivler */
  padding: 10px 5px;
  text-align: center;
}

.recent-stories {
  padding: 0;
}

.recent-stories li {
  line-height: 1.5em;
  list-style: none outside none;
  margin-bottom: 20px;
}

.recent-stories a {
  font-size: 0.9em;
}

#location-browse-submit {
  background: none repeat scroll 0 0 #ECF0F1; /* Clouds */
  border: 1px solid #BDC3C7; /* Silver */
  border-radius: 3px 3px 3px 3px;
  display: block;
  font-family: 'league gothic';
  font-size: 18px;
  margin-top: 5px;
  padding: 3px;
  width: 200px;
}

#location-browse-submit:hover {
  background: none repeat scroll 0 0 #E67E22; /* Carrot */
  border-color: #c0392b; /* Pomegranate */
  color: white;
}

/* Typography */

a:link, a:active, a:visited {
  color: #e67e22; /* Carrot */
  text-decoration: none;
}
#header a:link,
#header a:visited,
#header a:active,
#footer a:link,
#footer a:visited,
#footer a:active {
  color: #f1c40f; /* Sun Flower */
}

a:hover {
 text-decoration: underline;  
}

h1, h2 {
  color: #2c3e50; /* Midnight blue */
  font-family: 'League Gothic';
  font-weight: normal;
  text-transform: uppercase;
  margin: 0;
}

h1 {
  font-size: 40px;
}

h2 {
  font-size: 24px;
}

.icon {
  font-family: 'Entypo';
  font-size: 40px;
}

.icon.social {
  font-family: 'Entypo Social';
}

#header h1 {
  font-size: 30px;
  float: left;
}

#header h1 small {
  font-size: 20px;
  color: #ecf0f1;
}

#header nav a:link,
#header nav a:visited,
#header nav a:active {
  font-size: 20px;
  font-family: 'League Gothic';
  color: #ecf0f1; /* Clouds */
  text-transform: uppercase;
}

#header nav a:hover{
  color: #f1c40f; /* Sun flower */
  text-decoration: none;
}

#sidebar small {
  font-size: 0.5em;
  font-family: 'League Gothic';
  color: #7f8c8d; /* Asbestos */
  text-transform: uppercase;
}

#sidebar h2 small {
  font-size: 16px;
  margin: 0 0 0 3px;
}

#map-container {
  background-color: white;
}

/* Language switcher */
#header nav.language-switcher {
  margin-top: 12px;
}
#header nav.language-switcher li {
  padding-left: 10px;
}

#header nav.language-switcher li:first-child {
  margin-left: 30px;
}

#header nav.language-switcher li a {
  font-size: 15px;
  letter-spacing: 1px;
}
#header nav.language-switcher li a.active{
  color: #F1C40F; /* Sunflower */
}
/* END Language switcher */

/* Table styling */

table {
  border-bottom: 1px #34495E solid; /* Wet asphalt */
  font-size: 12px;
  margin: 20px 0;
}

td, th {
  padding: 5px 10px;
}

th {
  background-color: #34495E; /* Wet asphalt */
  color: #FFFFFF;
  font-weight: bold;
  text-align: left;
}

tr.even {
  background-color: #ECF0F1; /* Clouds */
}

/* Dropdown styling */
nav.dropdown {
  float: right;
  width: 120px;
}

nav.dropdown ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

nav.dropdown a {
  display: block;
}

nav.dropdown .level-one {
  background-color: #34495e; /* Wet asphalt */
  display:none;
  position: absolute;
  width: 120px;
  z-index: 100;
 
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}

.level-one li {
  padding: 5px;
}

.level-one a {
  color: #ecf0f1; /* Clouds */
  padding: 5px;
  text-decoration: none;
}

.level-one li:hover a {
  background-color: #2c3e50; /* Midnight blue */
  color: #bdc3c7; /* Silver */
}

nav.dropdown ul li:hover ul { /* Show first level dropdown on hover*/
  display:block;
}

.equals-sign {
  font-size: 40px;
  margin: 5px 0;
  text-align: center;
  font-family: 'League Gothic';
}

/* Dropdown specific styling for share button */

li.share-button {
  height: 42px;
  padding-bottom: 7px;
}

a.icon.share {
  background-color: #ecf0f1; /* Clouds */
  color: #7f8c8d; /* Asbestos */
  float: right;
  font-size: 35px;
  line-height: 35px;
  margin-top: 7px;
  text-align: center;
  text-decoration: none;
  width: 60px;

  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}

a.icon.share:hover {
  background-color: #34495e; /* Wet asphalt */
  color: #ecf0f1; /* Clouds */
}

#share-page .level-one {
  margin-top: 49px;
}

/* / End dropdown styling */

/* Chosen Overrides */
.chzn-container-single {
  margin: 5px 0;
}
.chzn-container-single .chzn-single,
.chzn-container .chzn-drop {
  background-color: #ecf0f1; /* Clouds */
  border: 1px solid #bdc3c7; /* Silver */
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  box-shadow: none;
  background-image: none;
}
.chzn-container-active .chzn-single-with-drop {
  border-bottom-left-radius: 0;  
  border-bottom-right-radius: 0;
}
.chzn-container .chzn-drop {
  border-top: none;
  border-top-left-radius: 0;  
  border-top-right-radius: 0;  
}
.chzn-container .chzn-results .highlighted {
  background-image: none;
  background-color: #e67e22; /* Carrot */
}

/* / Chosen Overrides */

/* Morris Overrides */
.morris-hover.morris-default-style {
    background-color: #FFFFFF;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    text-align: left;
}
.morris-hover.morris-default-style .morris-hover-row-label {
  font-family: 'League Gothic';
  font-weight: normal;
  margin:  0;
  font-size: 25px;
}
/* / Morris Overrides */

/* Media queries */
/*
@media screen and (min-width : 851px) {
  #map-container.one-fifths, #header.four-fifths, #sidebar.four-fifths, #footer.four-fifths {
    animation-duration: 2s;
    animation-delay: 0.5s;
  }
  #map-container.one-fifths {
    animation-name: slide-map;
  }
  #header.four-fifths, #sidebar.four-fifths, #footer.four-fifths {
    animation-name: slide-sidebar;
  }
  
  @keyframes slide-sidebar {
    0% {
      width: 40%;
    }
    100% {
      width: 80%;
    }
  }
  @keyframes slide-map {
    0% {
      width: 60%;
    }
    100% {
      width: 20%;
    }
  }
}
*/
@media screen and (min-width : 851px) and (max-width : 1150px) {
  /* Same properties as in w<450px */  
  #header.two-fifths nav.main-nav {
    float: none;
  }
  
  #header.two-fifths nav.main-nav li {
    padding: 0 20px 0 0;
  }
  
  #header.two-fifths .clear-small {
    display: block;
  }
  /* / Same properties as in w<450px */
 
}

@media screen and (max-width : 850px) {
  body {
    font-size: 16px;
  }
  .one-fifths {
    width: 100%;
    float: none;
  }
  
  .two-fifths {
    width: 100%;
    float: none;
  }
  
  .three-fifths {
    width: 100%;
    float: none;
  }
  
  .four-fifths {
    width: 100%;
    float: none;
  }
  
  #sidebar {
    margin: 10px 0 0 0;
  }
  
  #map {
    height: 500px !important;
    margin: 0 10px;
  }
  
  .wrapper {
    padding: 10px;
  }
  
  .desktop {
    display: none;
  }
  
  .stats-box {
    float: left;
    width: 46%;
    margin: 20px 0;
  }
  .stats-box:first-child {
    margin-right: 1%;
  }
  .stats-box:last-child {
    margin-left: 1%;
  }
  
  .equals-sign {
    float: left;
    width: 6%;
    margin-top: 33px;
  }

}

@media screen and (max-width : 450px) {
  /* Same properties as in 851 < w > 1150 */  
  #header nav.main-nav{
    float: none;
  }
  
  #header nav.main-nav li {
    padding: 0 20px 0 0;
  }
  
  .clear-small {
    display: block;
  }
  
  /* / Same properties as in 851 < w > 1150 */
 
 .content-column {
   float: none;
   width: 100%;
 }
 
 .content-column.first {
    margin-right: 0;
  }

}

